Update Go
