# api/service.go
@@ -3,23 +3,24 @@ package api
 import (
 	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/branislavlazic/midnight/api/validation"
 	"github.com/branislavlazic/midnight/model"
+	"github.com/branislavlazic/midnight/repository/postgres"
 	"github.com/branislavlazic/midnight/task"
 	"github.com/go-playground/validator/v10"
-	"github.com/gofiber/fiber/v2"
+	"github.com/labstack/echo/v4"
 	"github.com/rs/zerolog/log"
 )
 
 type ServiceRoutes struct {
-	serviceRepo   model.ServiceRepository
-	envRepo       model.EnvironmentRepository
+	repo          *postgres.Repository
 	taskScheduler *task.Scheduler
 }
 
-func NewServiceRoutes(serviceRepo model.ServiceRepository, envRepo model.EnvironmentRepository, taskScheduler *task.Scheduler) *ServiceRoutes {
-	return &ServiceRoutes{serviceRepo: serviceRepo, envRepo: envRepo, taskScheduler: taskScheduler}
+func NewServiceRoutes(repo *postgres.Repository, taskScheduler *task.Scheduler) *ServiceRoutes {
+	return &ServiceRoutes{repo: repo, taskScheduler: taskScheduler}
 }
 
 // CreateService godoc
@@ -28,34 +29,31 @@ func NewServiceRoutes(serviceRepo model.ServiceRepository, envRepo model.Environ
 // @Failure 400,404,409,422,500
 // @Success 201
 // @Router /v1/services [post]
-func (sr *ServiceRoutes) CreateService(ctx *fiber.Ctx) error {
+func (sr *ServiceRoutes) CreateService(ctx echo.Context) error {
 	var serviceRequest *model.ServiceRequest
-	if err := ctx.BodyParser(&serviceRequest); err != nil {
+	if err := ctx.Bind(&serviceRequest); err != nil {
 		log.Debug().Err(err).Msg("failed to parse the request as service")
-		return ctx.SendStatus(http.StatusBadRequest)
+		return ctx.NoContent(http.StatusBadRequest)
 	}
 	serviceRequest.Sanitize()
 	if err := validator.New().Struct(serviceRequest); err != nil {
-		return ctx.Status(http.StatusUnprocessableEntity).JSON(validation.ToValidationErrors(err.(validator.ValidationErrors)))
+		return ctx.JSON(http.StatusUnprocessableEntity, validation.ToValidationErrors(err.(validator.ValidationErrors)))
 	}
-	exists := sr.serviceRepo.ExistsByURL(serviceRequest.URL)
+	exists := sr.repo.ServiceExistsByURL(serviceRequest.URL)
 	if exists {
 		log.Debug().Msgf("a service for url %s is already registered", serviceRequest.URL)
 		return ctx.
-			Status(http.StatusConflict).
-			JSON(map[string]string{"error": fmt.Sprintf("A service for url %s is already registered", serviceRequest.URL)})
+			JSON(http.StatusConflict, map[string]string{"error": fmt.Sprintf("A service for url %s is already registered", serviceRequest.URL)})
 	}
-	env, err := sr.envRepo.GetByID(model.EnvironmentID(serviceRequest.EnvironmentID))
-	var ID model.ServiceID
+	env, err := sr.repo.GetEnvironmentByID(model.EnvironmentID(serviceRequest.EnvironmentID))
 	if err != nil {
 		log.Warn().Err(err).Msg("environment will not be set")
-		ID, err = sr.serviceRepo.Create(serviceRequest.ToPersistentService(0, nil))
-	} else {
-		ID, err = sr.serviceRepo.Create(serviceRequest.ToPersistentService(0, env))
 	}
+	ID, err := sr.repo.CreateService(serviceRequest.ToPersistentService(0, env))
+
 	if err != nil {
 		log.Error().Err(err).Msg("failed to create a service")
-		return ctx.SendStatus(http.StatusInternalServerError)
+		return ctx.NoContent(http.StatusInternalServerError)
 	}
 	taskConfig := task.Config{
 		ID:           int64(ID),
@@ -67,10 +65,9 @@ func (sr *ServiceRoutes) CreateService(ctx *fiber.Ctx) error {
 	err = sr.taskScheduler.Add(taskConfig, serviceRequest.CheckIntervalSeconds)
 	if err != nil {
 		log.Error().Err(err).Msg("failed to add the task")
-		return ctx.SendStatus(http.StatusInternalServerError)
+		return ctx.NoContent(http.StatusInternalServerError)
 	}
-	ctx.Set("Location", string(ctx.Request().Host())+ctx.Route().Path+"/"+fmt.Sprintf("%d", ID))
-	return ctx.SendStatus(http.StatusCreated)
+	return ctx.NoContent(http.StatusCreated)
 }
 
 // UpdateService godoc
@@ -79,29 +76,30 @@ func (sr *ServiceRoutes) CreateService(ctx *fiber.Ctx) error {
 // @Failure 400,404,422,500
 // @Success 200
 // @Router /v1/services/{id} [post]
-func (sr *ServiceRoutes) UpdateService(ctx *fiber.Ctx) error {
-	ID, err := ctx.ParamsInt("id")
+func (sr *ServiceRoutes) UpdateService(ctx echo.Context) error {
+	idStr := ctx.Param("id")
+	ID, err := strconv.ParseInt(idStr, 10, 64)
 	if err != nil {
-		return ctx.SendStatus(http.StatusBadRequest)
+		ctx.NoContent(http.StatusBadRequest)
+		return err
 	}
 	var serviceRequest *model.ServiceRequest
-	if err := ctx.BodyParser(&serviceRequest); err != nil {
+	if err := ctx.Bind(&serviceRequest); err != nil {
 		log.Debug().Err(err).Msg("failed to parse the request as service")
-		return ctx.SendStatus(http.StatusBadRequest)
+		return ctx.NoContent(http.StatusBadRequest)
 	}
 	serviceRequest.Sanitize()
 	if err := validator.New().Struct(serviceRequest); err != nil {
-		return ctx.Status(http.StatusUnprocessableEntity).JSON(validation.ToValidationErrors(err.(validator.ValidationErrors)))
+		return ctx.JSON(http.StatusUnprocessableEntity, validation.ToValidationErrors(err.(validator.ValidationErrors)))
 	}
-	env, err := sr.envRepo.GetByID(model.EnvironmentID(serviceRequest.EnvironmentID))
+	env, err := sr.repo.GetEnvironmentByID(model.EnvironmentID(serviceRequest.EnvironmentID))
 	if err != nil {
 		log.Warn().Err(err).Msg("environment will not be set")
-		err = sr.serviceRepo.Update(serviceRequest.ToPersistentService(model.ServiceID(ID), nil))
-	} else {
-		err = sr.serviceRepo.Update(serviceRequest.ToPersistentService(model.ServiceID(ID), env))
 	}
+	err = sr.repo.UpdateService(serviceRequest.ToPersistentService(model.ServiceID(ID), env))
 	if err != nil {
-		return ctx.SendStatus(http.StatusInternalServerError)
+		log.Error().Err(err).Msg("failed to update the service")
+		return ctx.NoContent(http.StatusInternalServerError)
 	}
 	taskConfig := task.Config{
 		ID:           int64(ID),
@@ -113,9 +111,9 @@ func (sr *ServiceRoutes) UpdateService(ctx *fiber.Ctx) error {
 	err = sr.taskScheduler.Update(taskConfig, serviceRequest.CheckIntervalSeconds)
 	if err != nil {
 		log.Error().Err(err).Msg("failed to update the task scheduler")
-		return ctx.SendStatus(http.StatusInternalServerError)
+		return ctx.NoContent(http.StatusInternalServerError)
 	}
-	return ctx.SendStatus(http.StatusOK)
+	return ctx.NoContent(http.StatusOK)
 }
 
 // GetAllServices godoc
@@ -123,13 +121,13 @@ func (sr *ServiceRoutes) UpdateService(ctx *fiber.Ctx) error {
 // @Failure 404
 // @Success 200
 // @Router /v1/services [get]
-func (sr *ServiceRoutes) GetAllServices(ctx *fiber.Ctx) error {
-	services, err := sr.serviceRepo.GetAll()
+func (sr *ServiceRoutes) GetAllServices(ctx echo.Context) error {
+	services, err := sr.repo.GetAllServices()
 	if err != nil {
 		log.Debug().Err(err).Msg("failed to fetch all services")
-		return ctx.SendStatus(http.StatusNotFound)
+		return ctx.NoContent(http.StatusNotFound)
 	}
-	return ctx.Status(http.StatusOK).JSON(services)
+	return ctx.JSON(http.StatusOK, services)
 }
 
 // GetById godoc
@@ -138,17 +136,19 @@ func (sr *ServiceRoutes) GetAllServices(ctx *fiber.Ctx) error {
 // @Failure 404
 // @Success 200
 // @Router /v1/services/{id} [get]
-func (sr *ServiceRoutes) GetById(ctx *fiber.Ctx) error {
-	id, err := ctx.ParamsInt("id")
+func (sr *ServiceRoutes) GetById(ctx echo.Context) error {
+	idStr := ctx.Param("id")
+	ID, err := strconv.ParseInt(idStr, 10, 64)
 	if err != nil {
-		return ctx.SendStatus(http.StatusBadRequest)
+		ctx.NoContent(http.StatusBadRequest)
+		return err
 	}
-	service, err := sr.serviceRepo.GetById(model.ServiceID(id))
+	service, err := sr.repo.GetServiceById(model.ServiceID(ID))
 	if err != nil {
-		log.Debug().Err(err).Msgf("failed to find a service by id %d", id)
-		return ctx.SendStatus(http.StatusNotFound)
+		log.Debug().Err(err).Msgf("failed to find a service by id %d", ID)
+		return ctx.NoContent(http.StatusNotFound)
 	}
-	return ctx.Status(http.StatusOK).JSON(service)
+	return ctx.JSON(http.StatusOK, service)
 }
 
 // DeleteById godoc
@@ -158,20 +158,22 @@ func (sr *ServiceRoutes) GetById(ctx *fiber.Ctx) error {
 // @Failure 400,404
 // @Success 204
 // @Router /v1/services/{id} [delete]
-func (sr *ServiceRoutes) DeleteById(ctx *fiber.Ctx) error {
-	id, err := ctx.ParamsInt("id")
+func (sr *ServiceRoutes) DeleteById(ctx echo.Context) error {
+	idStr := ctx.Param("id")
+	ID, err := strconv.ParseInt(idStr, 10, 64)
 	if err != nil {
-		return ctx.SendStatus(http.StatusBadRequest)
+		ctx.NoContent(http.StatusBadRequest)
+		return err
 	}
-	err = sr.serviceRepo.DeleteById(model.ServiceID(id))
+	err = sr.repo.DeleteServiceById(model.ServiceID(ID))
 	if err != nil {
 		log.Debug().Err(err).Msg("failed to delete the service. not found.")
-		return ctx.SendStatus(http.StatusNotFound)
+		return ctx.NoContent(http.StatusNotFound)
 	}
-	err = sr.taskScheduler.Remove(int64(id))
+	err = sr.taskScheduler.Remove(int64(ID))
 	if err != nil {
-		log.Debug().Err(err).Msgf("failed to remove task with id %d.", id)
-		return ctx.SendStatus(http.StatusInternalServerError)
+		log.Debug().Err(err).Msgf("failed to remove task with id %d.", ID)
+		return ctx.NoContent(http.StatusInternalServerError)
 	}
-	return ctx.SendStatus(http.StatusNoContent)
+	return ctx.NoContent(http.StatusNoContent)
 }
