# docs/swagger.json
@@ -4,6 +4,47 @@
         "contact": {}
     },
     "paths": {
+        "/v1/environments": {
+            "get": {
+                "summary": "Get all environments",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "post": {
+                "summary": "Create an environment",
+                "parameters": [
+                    {
+                        "description": "Environment request body",
+                        "name": "environmentRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.EnvironmentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/v1/login": {
             "post": {
                 "summary": "Login",
@@ -33,19 +74,6 @@
                     },
                     "422": {
                         "description": "Unprocessable Entity"
-                    }
-                }
-            }
-        },
-        "/v1/logout": {
-            "post": {
-                "summary": "Logout",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -191,6 +219,14 @@
         }
     },
     "definitions": {
+        "model.EnvironmentRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.LoginRequest": {
             "type": "object",
             "required": [
@@ -217,9 +253,16 @@
                     "type": "integer",
                     "maximum": 1000000
                 },
+                "environmentId": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string",
                     "maxLength": 255
+                },
+                "responseBody": {
+                    "type": "string",
+                    "maxLength": 8192
                 },
                 "url": {
                     "type": "string",
